Completed  getting started page and corrected sizing issues on small screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -404,6 +404,21 @@ a {
 }
 
 
+@media (max-width: 550px) {
+
+  .article-container{
+    padding: 0 10px 0 10px;
+  }
+  }
+
+  @media (max-width: 550px) {
+
+    .article{
+      margin-left: 0;
+    }
+    }
+  
+
 /* ========================== 
    footer
    ========================== */
